--- a/src/Formee/Services/Forms/Presentation/appsettings.Development.json
+++ b/src/Formee/Services/Forms/Presentation/appsettings.Development.json
@@ -4,5 +4,18 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "Authentication": {
+    "Schemes": {
+      "Bearer": {
+        "ValidAudiences": [
+          "http://localhost:49524",
+          "https://localhost:44348",
+          "http://localhost:5225",
+          "https://localhost:7022"
+        ],
+        "ValidIssuer": "dotnet-user-jwts"
+      }
+    }
   }
 }
