--- a/src/Formee/Services/Forms/Presentation/appsettings.json
+++ b/src/Formee/Services/Forms/Presentation/appsettings.json
@@ -7,6 +7,10 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "" 
+    "DefaultConnection": ""
+  },
+  "IdentityManagement": {
+    "Authority": "",
+    "Audience": ""
   }
 }
