--- a/src/Formee/Services/Forms/Application/Application.csproj
+++ b/src/Formee/Services/Forms/Application/Application.csproj
@@ -8,11 +8,14 @@
 
   <ItemGroup>
     <Folder Include="Behaviors\" />
+    <Folder Include="FieldsWarehouse\Commands\" />
+    <Folder Include="FieldsWarehouse\Query\" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="MediatR" Version="12.0.1" />
     <PackageReference Include="MediatR.Extensions.FluentValidation.AspNetCore" Version="4.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.0" />
   </ItemGroup>
 
   <ItemGroup>
