implement category and site api endpoints

--- a/src/Formee/Services/Links/Links.API/Links.API.csproj
+++ b/src/Formee/Services/Links/Links.API/Links.API.csproj
@@ -16,7 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Links.DataAccess\Links.DataAccess.csproj" />
+    <ProjectReference Include="..\Links.DataAccess\Links.BusinessLogic.csproj" />
   </ItemGroup>
 
 </Project>
