implement azure service bus

--- a/src/Formee/Services/Analytics/Analytics.API/Analytics.API.csproj
+++ b/src/Formee/Services/Analytics/Analytics.API/Analytics.API.csproj
@@ -22,10 +22,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<Folder Include="Middlewares\" />
-	</ItemGroup>
-
-	<ItemGroup>
+		<ProjectReference Include="..\..\..\Shared\ServiceBus\ServiceBus.csproj" />
 		<ProjectReference Include="..\Analytics.DataAccess\Analytics.BusinessLogic.csproj" />
 	</ItemGroup>
 </Project>
