--- a/src/Formee/Services/History/package.json
+++ b/src/Formee/Services/History/package.json
@@ -3,6 +3,7 @@
     "@azure/identity": "^3.1.3",
     "@azure/service-bus": "^7.8.1",
     "body-parser": "^1.20.2",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongoose": "^7.0.3"
   },
