add get all by container id endpoint

--- a/src/Formee/Gateways/Gateway.Core/appsettings.json
+++ b/src/Formee/Gateways/Gateway.Core/appsettings.json
@@ -180,6 +180,18 @@
       "UpstreamPathTemplate": "/api/links/redirect/{targetUrl}",
       "UpstreamHttpMethod": [ "GET" ]
     },
+    {
+      "DownstreamPathTemplate": "/api/links/redirects/all/{linkId}",
+      "DownstreamScheme": "http",
+      "DownstreamHostAndPorts": [
+        {
+          "Host": "links.api",
+          "Port": 80
+        }
+      ],
+      "UpstreamPathTemplate": "/api/links/redirects/all/{linkId}",
+      "UpstreamHttpMethod": [ "GET" ]
+    },
     // Notifications Service
     {
       "DownstreamPathTemplate": "/api/notifications/all/{globalUserId}/{numberOfRecords}",
