implement identity and major dashboard design changes

--- a/src/Formee/Gateways/Gateway.Core/appsettings.json
+++ b/src/Formee/Gateways/Gateway.Core/appsettings.json
@@ -157,6 +157,18 @@
       "UpstreamHttpMethod": [ "GET", "DELETE" ]
     },
     {
+      "DownstreamPathTemplate": "/api/links/hits/all/{containerId}/{startDate:DateTime}/{endDate:DateTime}",
+      "DownstreamScheme": "http",
+      "DownstreamHostAndPorts": [
+        {
+          "Host": "links.api",
+          "Port": 80
+        }
+      ],
+      "UpstreamPathTemplate": "/api/links/hits/all/{containerId}/{startDate:DateTime}/{endDate:DateTime}",
+      "UpstreamHttpMethod": [ "GET" ]
+    },
+    {
       "DownstreamPathTemplate": "/api/links",
       "DownstreamScheme": "http",
       "DownstreamHostAndPorts": [
@@ -228,6 +240,43 @@
       ],
       "UpstreamPathTemplate": "/hubs/{catchAll}",
       "UpstreamHttpMethod": [ "GET", "POST", "PUT", "DELETE", "OPTIONS" ]
+    },
+    // Identity API
+    {
+      "DownstreamPathTemplate": "/api/identity/users",
+      "DownstreamScheme": "http",
+      "DownstreamHostAndPorts": [
+        {
+          "Host": "identity.api",
+          "Port": 80
+        }
+      ],
+      "UpstreamPathTemplate": "/api/identity/users",
+      "UpstreamHttpMethod": [ "POST" ]
+    },
+    {
+      "DownstreamPathTemplate": "/api/identity/users/{userId:Guid}",
+      "DownstreamScheme": "http",
+      "DownstreamHostAndPorts": [
+        {
+          "Host": "identity.api",
+          "Port": 80
+        }
+      ],
+      "UpstreamPathTemplate": "/api/identity/users/{userId:Guid}",
+      "UpstreamHttpMethod": [ "GET" ]
+    },
+    {
+      "DownstreamPathTemplate": "/api/identity/users/{authId}",
+      "DownstreamScheme": "http",
+      "DownstreamHostAndPorts": [
+        {
+          "Host": "identity.api",
+          "Port": 80
+        }
+      ],
+      "UpstreamPathTemplate": "/api/identity/users/{authId}",
+      "UpstreamHttpMethod": [ "GET" ]
     }
   ]
 }
