--- a/src/Formee/Clients/Clients.Web.Components/Clients.Web.Components.csproj
+++ b/src/Formee/Clients/Clients.Web.Components/Clients.Web.Components.csproj
@@ -6,6 +6,14 @@
 		<ImplicitUsings>enable</ImplicitUsings>
 	</PropertyGroup>
 
+	<ItemGroup>
+	  <None Remove="Components\Modals\FmModal.razor.css" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Content Include="Components\Modals\FmModal.razor.css" />
+	</ItemGroup>
+
 
 	<ItemGroup>
 		<SupportedPlatform Include="browser" />
