clean analytics and links services, and add monitoring service

--- a/src/Formee/Gateways/Gateway.Core/appsettings.json
+++ b/src/Formee/Gateways/Gateway.Core/appsettings.json
@@ -70,7 +70,7 @@
       "UpstreamHttpMethod": [ "GET" ]
     },
     {
-      "DownstreamPathTemplate": "/api/hits/all/{siteId}/{startDate:DateTime}/{endDate:DateTime}",
+      "DownstreamPathTemplate": "/api/hits/all/{siteId}/{startDate:DateTime}/{endDate:DateTime}?filter={filter}",
       "DownstreamScheme": "http",
       "DownstreamHostAndPorts": [
         {
@@ -78,7 +78,7 @@
           "Port": 80
         }
       ],
-      "UpstreamPathTemplate": "/api/hits/all/{siteId}/{startDate:DateTime}/{endDate:DateTime}",
+      "UpstreamPathTemplate": "/api/hits/all/{siteId}/{startDate:DateTime}/{endDate:DateTime}?filter={filter}",
       "UpstreamHttpMethod": [ "GET" ]
     },
     {
@@ -120,7 +120,7 @@
     },
     // History Service
     {
-      "DownstreamPathTemplate": "/api/history/all/{userId}",
+      "DownstreamPathTemplate": "/api/history/all/{everything}",
       "DownstreamScheme": "http",
       "DownstreamHostAndPorts": [
         {
@@ -128,7 +128,7 @@
           "Port": 3000
         }
       ],
-      "UpstreamPathTemplate": "/api/history/all/{userId}",
+      "UpstreamPathTemplate": "/api/history/all/{everything}",
       "UpstreamHttpMethod": [ "GET" ]
     },
     // Links Service
@@ -277,6 +277,18 @@
       ],
       "UpstreamPathTemplate": "/api/identity/users/{authId}",
       "UpstreamHttpMethod": [ "GET" ]
+    },
+    {
+      "DownstreamPathTemplate": "/api/identity/users/avatar/{userId}",
+      "DownstreamScheme": "http",
+      "DownstreamHostAndPorts": [
+        {
+          "Host": "identity.api",
+          "Port": 80
+        }
+      ],
+      "UpstreamPathTemplate": "/api/identity/users/avatar/{userId}",
+      "UpstreamHttpMethod": [ "POST" ]
     }
   ]
 }
