--- a/src/Formee/Services/Analytics/Analytics.API/appsettings.json
+++ b/src/Formee/Services/Analytics/Analytics.API/appsettings.json
@@ -7,7 +7,9 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "",
-    "ServiceBus": ""
+    "DefaultConnection": ""
+  },
+  "AzureServiceBus": {
+    "ConnectionString": ""
   }
 }
