--- a/src/Formee/Services/Identity/Identity.API/Identity.API.csproj
+++ b/src/Formee/Services/Identity/Identity.API/Identity.API.csproj
@@ -24,4 +24,8 @@
 	<ItemGroup>
 		<ProjectReference Include="..\Identity.BusinessLogic\Identity.BusinessLogic.csproj" />
 	</ItemGroup>
+
+	<ItemGroup>
+	  <Folder Include="Controllers\" />
+	</ItemGroup>
 </Project>
