add shared communication library

--- a/src/Formee/Services/Containers/API/API.csproj
+++ b/src/Formee/Services/Containers/API/API.csproj
@@ -21,6 +21,7 @@
 
 	<ItemGroup>
 	  <ProjectReference Include="..\..\..\Shared\ServiceBus\ServiceBus.csproj" />
+	  <ProjectReference Include="..\..\..\Shared\SynchronousCommunication\SynchronousCommunication.csproj" />
 	</ItemGroup>
 
 </Project>
