--- a/src/Formee/Services/Containers/API/appsettings.json
+++ b/src/Formee/Services/Containers/API/appsettings.json
@@ -16,5 +16,8 @@
   },
   "Settings": {
     "EnableHttpsRedirection": false
+  },
+  "Services": {
+    "Subscriptions": "http://localhost:5214/"
   }
 }
