--- a/src/Formee/Services/Links/Links.API/appsettings.json
+++ b/src/Formee/Services/Links/Links.API/appsettings.json
@@ -8,5 +8,8 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": ""
+  },
+  "Services": {
+    "Subscriptions": "http://localhost:5214/"
   }
 }
