--- a/src/Formee/docker-compose.yml
+++ b/src/Formee/docker-compose.yml
@@ -1,18 +1,18 @@
 version: "3.8"
 
 services:
-  # client.web:
-  #   image: client.web
-  #   container_name: client.web
-  #   build:
-  #     context: .
-  #     dockerfile: "./Clients/Client.Web/Dockerfile"
-  #   expose:
-  #     - "80"
-  #   ports:
-  #     - "8080:80"
-  #   depends_on:
-  #     - gateway.core
+  client.web:
+    image: client.web
+    container_name: client.web
+    build:
+      context: .
+      dockerfile: "./Clients/Client.Web/Dockerfile"
+    expose:
+      - "80"
+    ports:
+      - "8080:80"
+    depends_on:
+      - gateway.core
       
   gateway.core:
     image: gateway.core
