add feature limits

--- a/src/Formee/Services/Analytics/Analytics.API/Analytics.API.csproj
+++ b/src/Formee/Services/Analytics/Analytics.API/Analytics.API.csproj
@@ -25,6 +25,7 @@
 
 	<ItemGroup>
 		<ProjectReference Include="..\..\..\Shared\ServiceBus\ServiceBus.csproj" />
+		<ProjectReference Include="..\..\..\Shared\SynchronousCommunication\SynchronousCommunication.csproj" />
 		<ProjectReference Include="..\Analytics.DataAccess\Analytics.BusinessLogic.csproj" />
 	</ItemGroup>
 </Project>
