--- a/src/Formee/Services/Analytics/Analytics.API/appsettings.json
+++ b/src/Formee/Services/Analytics/Analytics.API/appsettings.json
@@ -11,5 +11,8 @@
   },
   "AzureServiceBus": {
     "ConnectionString": ""
+  },
+  "Services": {
+    "Subscriptions": "http://localhost:5214/"
   }
 }
