add state management

--- a/src/Formee/Services/Analytics/Analytics.API/appsettings.json
+++ b/src/Formee/Services/Analytics/Analytics.API/appsettings.json
@@ -9,8 +9,10 @@
   "ConnectionStrings": {
     "DefaultConnection": ""
   },
-  "AzureServiceBus": {
-    "ConnectionString": ""
+  "ServiceBus": {
+    "ConnectionString": "",
+    "HistoryTopic": "",
+    "NotificationsTopic": ""
   },
   "Services": {
     "Subscriptions": "http://localhost:5214/"
