--- a/src/Formee/Gateways/Gateway.Core/appsettings.json
+++ b/src/Formee/Gateways/Gateway.Core/appsettings.json
@@ -13,7 +13,7 @@
       "DownstreamScheme": "http",
       "DownstreamHostAndPorts": [
         {
-          "Host": "containers.api",
+          "Host": "containers.service",
           "Port": 80
         }
       ],
@@ -25,7 +25,7 @@
       "DownstreamScheme": "http",
       "DownstreamHostAndPorts": [
         {
-          "Host": "containers.api",
+          "Host": "containers.service",
           "Port": 80
         }
       ],
@@ -37,7 +37,7 @@
       "DownstreamScheme": "http",
       "DownstreamHostAndPorts": [
         {
-          "Host": "containers.api",
+          "Host": "containers.service",
           "Port": 80
         }
       ],
@@ -50,7 +50,7 @@
       "DownstreamScheme": "http",
       "DownstreamHostAndPorts": [
         {
-          "Host": "analytics.api",
+          "Host": "analytics.service",
           "Port": 80
         }
       ],
@@ -62,7 +62,7 @@
       "DownstreamScheme": "http",
       "DownstreamHostAndPorts": [
         {
-          "Host": "analytics.api",
+          "Host": "analytics.service",
           "Port": 80
         }
       ],
@@ -74,7 +74,7 @@
       "DownstreamScheme": "http",
       "DownstreamHostAndPorts": [
         {
-          "Host": "analytics.api",
+          "Host": "analytics.service",
           "Port": 80
         }
       ],
@@ -86,12 +86,24 @@
       "DownstreamScheme": "http",
       "DownstreamHostAndPorts": [
         {
-          "Host": "analytics.api",
+          "Host": "analytics.service",
           "Port": 80
         }
       ],
       "UpstreamPathTemplate": "/api/hits",
       "UpstreamHttpMethod": [ "POST" ]
+    },
+    {
+      "DownstreamPathTemplate": "/api/category/top/{siteId}",
+      "DownstreamScheme": "http",
+      "DownstreamHostAndPorts": [
+        {
+          "Host": "analytics.service",
+          "Port": 80
+        }
+      ],
+      "UpstreamPathTemplate": "/api/category/top/{siteId}",
+      "UpstreamHttpMethod": [ "GET" ]
     },
     // Forms Service
     {
@@ -99,7 +111,7 @@
       "DownstreamScheme": "http",
       "DownstreamHostAndPorts": [
         {
-          "Host": "forms.api",
+          "Host": "forms.service",
           "Port": 80
         }
       ],
@@ -111,7 +123,7 @@
       "DownstreamScheme": "http",
       "DownstreamHostAndPorts": [
         {
-          "Host": "forms.api",
+          "Host": "forms.service",
           "Port": 80
         }
       ],
@@ -124,7 +136,7 @@
       "DownstreamScheme": "http",
       "DownstreamHostAndPorts": [
         {
-          "Host": "history.api",
+          "Host": "history.service",
           "Port": 3000
         }
       ],
@@ -137,7 +149,7 @@
       "DownstreamScheme": "http",
       "DownstreamHostAndPorts": [
         {
-          "Host": "links.api",
+          "Host": "links.service",
           "Port": 80
         }
       ],
@@ -149,7 +161,7 @@
       "DownstreamScheme": "http",
       "DownstreamHostAndPorts": [
         {
-          "Host": "links.api",
+          "Host": "links.service",
           "Port": 80
         }
       ],
@@ -161,7 +173,7 @@
       "DownstreamScheme": "http",
       "DownstreamHostAndPorts": [
         {
-          "Host": "links.api",
+          "Host": "links.service",
           "Port": 80
         }
       ],
@@ -173,7 +185,7 @@
       "DownstreamScheme": "http",
       "DownstreamHostAndPorts": [
         {
-          "Host": "links.api",
+          "Host": "links.service",
           "Port": 80
         }
       ],
@@ -185,7 +197,7 @@
       "DownstreamScheme": "http",
       "DownstreamHostAndPorts": [
         {
-          "Host": "links.api",
+          "Host": "links.service",
           "Port": 80
         }
       ],
@@ -197,7 +209,7 @@
       "DownstreamScheme": "http",
       "DownstreamHostAndPorts": [
         {
-          "Host": "links.api",
+          "Host": "links.service",
           "Port": 80
         }
       ],
@@ -210,7 +222,7 @@
       "DownstreamScheme": "http",
       "DownstreamHostAndPorts": [
         {
-          "Host": "notifications.api",
+          "Host": "notifications.service",
           "Port": 80
         }
       ],
@@ -222,7 +234,7 @@
       "DownstreamScheme": "http",
       "DownstreamHostAndPorts": [
         {
-          "Host": "notifications.api",
+          "Host": "notifications.service",
           "Port": 80
         }
       ],
@@ -234,7 +246,7 @@
       "DownstreamScheme": "ws",
       "DownstreamHostAndPorts": [
         {
-          "Host": "notifications.api",
+          "Host": "notifications.service",
           "Port": 80
         }
       ],
@@ -247,7 +259,7 @@
       "DownstreamScheme": "http",
       "DownstreamHostAndPorts": [
         {
-          "Host": "identity.api",
+          "Host": "identity.service",
           "Port": 80
         }
       ],
@@ -259,7 +271,7 @@
       "DownstreamScheme": "http",
       "DownstreamHostAndPorts": [
         {
-          "Host": "identity.api",
+          "Host": "identity.service",
           "Port": 80
         }
       ],
@@ -271,7 +283,7 @@
       "DownstreamScheme": "http",
       "DownstreamHostAndPorts": [
         {
-          "Host": "identity.api",
+          "Host": "identity.service",
           "Port": 80
         }
       ],
@@ -283,7 +295,7 @@
       "DownstreamScheme": "http",
       "DownstreamHostAndPorts": [
         {
-          "Host": "identity.api",
+          "Host": "identity.service",
           "Port": 80
         }
       ],
