--- a/src/Formee/Services/Monitoring/Monitoring/appsettings.json
+++ b/src/Formee/Services/Monitoring/Monitoring/appsettings.json
@@ -6,7 +6,16 @@
     }
   },
   "AllowedHosts": "*",
-  "HealthChecks": {
-    "LinksDb":  "Server=host.docker.internal, 1433;Database=Formee.Links;User Id=Admin;Password=Admin@123123;integrated security=false;TrustServerCertificate=True"
+  "HealthChecksUI": {
+    "HealthChecks": [
+      {
+        "Name": "Links Service",
+        "Uri": "http://host.docker.internal:5005/healthcheck"
+      },
+      {
+        "Name": "Analytics HTTP Service",
+        "Uri": "http://host.docker.internal:5001/healthcheck"
+      }
+    ]
   }
 }
