add identity management

--- a/src/Formee/Services/Identity/Identity.API/Identity.API.csproj
+++ b/src/Formee/Services/Identity/Identity.API/Identity.API.csproj
@@ -22,10 +22,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<ProjectReference Include="..\..\..\Shared\SynchronousCommunication\SynchronousCommunication.csproj" />
 		<ProjectReference Include="..\Identity.BusinessLogic\Identity.BusinessLogic.csproj" />
-	</ItemGroup>
-
-	<ItemGroup>
-	  <Folder Include="Controllers\" />
 	</ItemGroup>
 </Project>
