--- a/src/Formee/Services/Identity/Identity.API/appsettings.json
+++ b/src/Formee/Services/Identity/Identity.API/appsettings.json
@@ -16,6 +16,9 @@
     "ContainerName": ""
   },
   "ConnectionStrings": {
-    "DefaultConnection": "" 
+    "DefaultConnection": ""
+  },
+  "Services": {
+    "Subscriptions": ""
   }
 }
