--- a/src/Formee/Services/Identity/Identity.BusinessLogic/Identity.BusinessLogic.csproj
+++ b/src/Formee/Services/Identity/Identity.BusinessLogic/Identity.BusinessLogic.csproj
@@ -20,4 +20,8 @@
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
 	</ItemGroup>
+
+	<ItemGroup>
+	  <ProjectReference Include="..\..\..\Shared\SynchronousCommunication\SynchronousCommunication.csproj" />
+	</ItemGroup>
 </Project>
