update history dockerfile

--- a/src/Formee/Services/History/Dockerfile
+++ b/src/Formee/Services/History/Dockerfile
@@ -4,10 +4,10 @@ WORKDIR /app
 
 EXPOSE 3000
 
-COPY ./Services/History/package*.json .
+COPY ./Services/History/package*.json ./
 
 RUN npm install
 
-COPY ./Services/History .
+COPY ./Services/History ./
 
 CMD ["npm", "start"]
