Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -28,15 +28,14 @@ steps:
     action: Push services
     includeLatestTag: true
     includeSourceTags: true
-
-- script: docker login azure
-  displayName: Login to azure
-
-- script: docker context create aci deployacicontext
-  displayName: Deploy aci context
-
-- script: docker context use deployacicontext
-  displayName: Use aci context
-
-- script: docker compose up
-  displayName: Run containers
+    
+- task: AzureCLI@2
+  inputs:
+    azureSubscription: 'sb-adopting-msa'
+    scriptType: 'ps'
+    scriptLocation: 'inlineScript'
+    inlineScript: |
+      docker login azure
+      docker context create aci deployacicontext
+      docker context use deployacicontext
+      docker compose up
