--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,14 +10,14 @@ pool:
   vmImage: ubuntu-latest
 
 steps:
-#- task: DockerCompose@0
-#  displayName: Container registery login
-#  inputs:
-#    containerregistrytype: 'Azure Container Registry'
-#    azureSubscription: 'sb-adopting-msa'
-#    azureContainerRegistry: 'formee.azurecr.io'
-#    dockerComposeFile: 'src/Formee/docker-compose.yml'
-#    action: Build services
+- task: DockerCompose@0
+  displayName: Container registery login
+  inputs:
+    containerregistrytype: 'Azure Container Registry'
+    azureSubscription: 'sb-adopting-msa'
+    azureContainerRegistry: 'formee.azurecr.io'
+    dockerComposeFile: 'src/Formee/docker-compose.yml'
+    action: Build services
 
 - task: DockerCompose@0
   inputs:
