configure admins dashboard

--- a/src/Formee/Clients/Web.Components/Clients.Web.Components.csproj
+++ b/src/Formee/Clients/Web.Components/Clients.Web.Components.csproj
@@ -27,7 +27,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<ProjectReference Include="..\Client.Web.Utilities\Client.Web.Utilities.csproj" />
+	  <ProjectReference Include="..\Web.Utilities\Client.Web.Utilities.csproj" />
 	</ItemGroup>
 
 </Project>
