modify api's gateway and admins dashboard

--- a/src/Formee/Gateways/Gateway.Core/appsettings.json
+++ b/src/Formee/Gateways/Gateway.Core/appsettings.json
@@ -267,6 +267,18 @@
       "UpstreamHttpMethod": [ "POST" ]
     },
     {
+      "DownstreamPathTemplate": "/api/identity/users/all?filter={filter}",
+      "DownstreamScheme": "http",
+      "DownstreamHostAndPorts": [
+        {
+          "Host": "identity.service",
+          "Port": 80
+        }
+      ],
+      "UpstreamPathTemplate": "/gateway/identity/users/all?filter={filter}",
+      "UpstreamHttpMethod": [ "GET" ]
+    },
+    {
       "DownstreamPathTemplate": "/api/identity/users/{userId:Guid}",
       "DownstreamScheme": "http",
       "DownstreamHostAndPorts": [
@@ -373,6 +385,30 @@
         }
       ],
       "UpstreamPathTemplate": "/gateway/subscriptions/features",
+      "UpstreamHttpMethod": [ "POST", "PUT" ]
+    }, // coupons endpoints
+    {
+      "DownstreamPathTemplate": "/api/coupons/{id:int}",
+      "DownstreamScheme": "http",
+      "DownstreamHostAndPorts": [
+        {
+          "Host": "subscriptions.service",
+          "Port": 80
+        }
+      ],
+      "UpstreamPathTemplate": "/gateway/coupons/{id:int}",
+      "UpstreamHttpMethod": [ "GET", "DELETE" ]
+    },
+    {
+      "DownstreamPathTemplate": "/api/coupons",
+      "DownstreamScheme": "http",
+      "DownstreamHostAndPorts": [
+        {
+          "Host": "subscriptions.service",
+          "Port": 80
+        }
+      ],
+      "UpstreamPathTemplate": "/gateway/coupons",
       "UpstreamHttpMethod": [ "POST", "PUT" ]
     }
   ]
