--- a/src/Formee/Services/Monitoring/Monitoring/appsettings.json
+++ b/src/Formee/Services/Monitoring/Monitoring/appsettings.json
@@ -15,6 +15,10 @@
       {
         "Name": "Analytics HTTP Service",
         "Uri": "http://host.docker.internal:5001/healthcheck"
+      },
+      {
+        "Name": "Admins Dashboard (UI)",
+        "Uri": "https://localhost:7049/healthcheck"
       }
     ]
   }
