add health monitoring

--- a/src/Formee/Services/Containers/API/appsettings.json
+++ b/src/Formee/Services/Containers/API/appsettings.json
@@ -14,6 +14,13 @@
   "ConnectionStrings": {
     "ServiceBus": ""
   },
+  "ServiceBus": {
+    "ConnectionString": "Endpoint=sb://formee.servicebus.windows.net/;SharedAccessKeyName=RootManageSharedAccessKey;SharedAccessKey=+prGrnIC0RwHSKHF3zJ/5HW35R08KH4wG+ASbPIkqlk=",
+    "HistoryTopic": "topic-history",
+    "NotificationsTopic": "topic-notifications",
+    "NotificationsSubscription": "notifications",
+    "HistorySubscription": "history"
+  },
   "Settings": {
     "EnableHttpsRedirection": false
   },
