--- a/src/Formee/Services/Monitoring/Monitoring/appsettings.json
+++ b/src/Formee/Services/Monitoring/Monitoring/appsettings.json
@@ -9,16 +9,40 @@
   "HealthChecksUI": {
     "HealthChecks": [
       {
-        "Name": "Links Service",
-        "Uri": "http://host.docker.internal:5005/healthcheck"
-      },
-      {
-        "Name": "Analytics HTTP Service",
+        "Name": "Analytics HTTP Service (API)",
         "Uri": "http://host.docker.internal:5001/healthcheck"
       },
       {
+        "Name": "Containers Service (API)",
+        "Uri": "http://host.docker.internal:5002/healthcheck"
+      },
+      {
+        "Name": "Forms Service (API)",
+        "Uri": "http://host.docker.internal:5003/healthcheck"
+      },
+      {
+        "Name": "Identity Service (API)",
+        "Uri": "http://host.docker.internal:5004/healthcheck"
+      },
+      {
+        "Name": "Links Service (API)",
+        "Uri": "http://host.docker.internal:5005/healthcheck"
+      },
+      {
+        "Name": "Notifications Service (API)",
+        "Uri": "http://host.docker.internal:5006/healthcheck"
+      },
+      {
+        "Name": "Subscriptions Service (API)",
+        "Uri": "http://host.docker.internal:5007/healthcheck"
+      },
+      {
+        "Name": "History Service (API)",
+        "Uri": "http://host.docker.internal:5008/healthcheck"
+      },
+      {
         "Name": "Admins Dashboard (UI)",
-        "Uri": "https://localhost:7049/healthcheck"
+        "Uri": "http://host.docker.internal:8081/healthcheck"
       }
     ]
   }
