--- a/src/Formee/Services/Containers/API/API.csproj
+++ b/src/Formee/Services/Containers/API/API.csproj
@@ -12,6 +12,7 @@
 	<ItemGroup>
 		<PackageReference Include="AspNetCore.HealthChecks.AzureServiceBus" Version="6.1.0" />
 		<PackageReference Include="AspNetCore.HealthChecks.MongoDb" Version="6.0.2" />
+		<PackageReference Include="AspNetCore.HealthChecks.UI.Client" Version="6.0.5" />
 		<PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.0" />
 		<PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.3" />
 		<PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.17.2" />
