--- a/src/Formee/Services/Forms/Presentation/Presentation.csproj
+++ b/src/Formee/Services/Forms/Presentation/Presentation.csproj
@@ -10,6 +10,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+	<PackageReference Include="AspNetCore.HealthChecks.UI.Client" Version="6.0.5" />
 	<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.3" />
 	<PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.3" />
 	<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.3">
@@ -18,6 +19,7 @@
 	</PackageReference>
 	<PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.17.2" />
 	<PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+	<PackageReference Include="AspNetCore.HealthChecks.SqlServer" Version="6.0.2" />
   </ItemGroup>
 
   <ItemGroup>
