protect api routes in services

--- a/src/Formee/FrontEnd/Admins/Admins.Web/appsettings.json
+++ b/src/Formee/FrontEnd/Admins/Admins.Web/appsettings.json
@@ -7,11 +7,8 @@
   },
   "AllowedHosts": "*",
   "GatewayUrl": "http://localhost:5000",
-  "AzureAd": {
-    "Instance": "https://login.microsoftonline.com/",
-    "Domain": "mohammedalwedaeioutlook.onmicrosoft.com",
-    "TenantId": "7f63dd72-e4db-44cf-8270-6a6e76b0d3ca",
-    "ClientId": "203ee8a6-12ed-42dc-8b61-cc812ffbbddf",
-    "CallbackPath": "/authentication/login-callback"
+  "Auth0": {
+    "Domain": "dev-pnxnfhh8.us.auth0.com",
+    "ClientId": "IAdJw8cHpBRVUAoCEV7fnj1wjXbfXpJt"
   }
 }
