--- a/src/Formee/Gateways/Gateway.Core/appsettings.json
+++ b/src/Formee/Gateways/Gateway.Core/appsettings.json
@@ -255,6 +255,18 @@
     },
     // Identity API
     {
+      "DownstreamPathTemplate": "/api/identity/admins/{roleId}",
+      "DownstreamScheme": "http",
+      "DownstreamHostAndPorts": [
+        {
+          "Host": "identity.service",
+          "Port": 80
+        }
+      ],
+      "UpstreamPathTemplate": "/gateway/identity/admins/{roleId}",
+      "UpstreamHttpMethod": [ "POST" ]
+    },
+    {
       "DownstreamPathTemplate": "/api/identity/users",
       "DownstreamScheme": "http",
       "DownstreamHostAndPorts": [
