--- a/src/Formee/Services/Identity/Identity.API/appsettings.json
+++ b/src/Formee/Services/Identity/Identity.API/appsettings.json
@@ -6,10 +6,10 @@
     }
   },
   "AllowedHosts": "*",
-  "Identity": {
-    "Authority": "",
-    "Audience": "",
-    "APIUrl": ""
+  "Auth0": {
+    "Authority": "https://dev-pnxnfhh8.us.auth0.com/",
+    "Audience": "https:api.formee.io/identity",
+    "APIUrl": "https://login.auth0.com"
   },
   "AzureStorage": {
     "ConnectionString": "",
