--- a/src/Formee/Services/Analytics/Analytics.API/appsettings.json
+++ b/src/Formee/Services/Analytics/Analytics.API/appsettings.json
@@ -16,5 +16,9 @@
   },
   "Services": {
     "Subscriptions": "http://localhost:5214/"
+  },
+  "Auth0": {
+    "Authority": "https://dev-pnxnfhh8.us.auth0.com/",
+    "Audience": "https://services.formee.io"
   }
 }
