--- a/src/Formee/Services/Forms/Presentation/appsettings.json
+++ b/src/Formee/Services/Forms/Presentation/appsettings.json
@@ -9,8 +9,8 @@
   "ConnectionStrings": {
     "DefaultConnection": ""
   },
-  "IdentityManagement": {
-    "Authority": "",
-    "Audience": ""
+  "Auth0": {
+    "Authority": "https://dev-pnxnfhh8.us.auth0.com/",
+    "Audience": "https://services.formee.io"
   }
 }
